# Entropy-Desktop

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SPECS.md  STRUCTURE.md  android_build_log.txt  android_final_log.txt  android_init_log.txt  check_results.txt  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: publish.js
src/: App.svelte  app.css
src-tauri/: Cargo.toml  cargo_build_log.txt  cargo_check_log_2.txt  cargo_check_log_3.txt  cargo_check_media_fix.txt  cargo_check_media_fix_2.txt  entropy_backup_1771500718233.entropy  fix_outbox.py  fix_race.py  metadata.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: app_state.rs  audio.rs  commands.rs  diag.rs  lib.rs  main.rs  media_proxy.rs  noise.rs  notification.rs  signal_store.rs
src-tauri/src/commands/: android_utils.rs  download_media.rs  mod.rs  network.rs  pow.rs  protocol.rs  signal.rs  system.rs  types.rs  vault.rs
src-tauri/src/commands/identity/: mod.rs  nicknames.rs  trust.rs
src-tauri/src/commands/messaging/: chat.rs  groups.rs  inbox.rs  mod.rs  outbox.rs
src-tauri/src/commands/messaging/inbox/: decrypt.rs  decryption.rs  mod.rs  reassembler.rs
src-tauri/src/commands/messaging/inbox/handlers/: groups.rs  media.rs  mod.rs  reaction.rs  status.rs  system.rs  text.rs
src-tauri/src/commands/messaging/outbox/: mod.rs
src-tauri/src/commands/messaging/outbox/handlers/: media.rs  mod.rs  reaction.rs  status.rs  text.rs
src-tauri/src/commands/network/: mod.rs  pacing.rs  request.rs  session.rs  transit.rs
src-tauri/src/commands/vault/: backup.rs  core.rs  media.rs  mod.rs  storage.rs
src-tauri/src/protocol/: crypto.rs  groups.rs  media.rs  mod.rs  types.rs  utils.rs
src-tauri/src/security/: noise.rs
src-tauri/src/tests/: encryption.rs  feature_tests.rs  mod.rs  protocol_tests.rs
src-tauri/updater-keys/: entropy.key.pub
src-ui/: App.svelte  app.css
src-ui/components/: AttachmentRenderer.svelte  Avatar.svelte  CallOverlay.svelte  ChatHeader.svelte  ChatWindow.svelte  ContactProfile.svelte  CreateGroupOverlay.svelte  EmojiPicker.svelte  ImageEditor.svelte  Lightbox.svelte  MediaThumbnail.svelte  MessageBubble.svelte  MessageContent.svelte  MessageInputArea.svelte  Modal.svelte  Onboarding.svelte  RecordingBar.svelte  SettingsPanel.svelte  Sidebar.svelte  StarredMessages.svelte  TitleBar.svelte  Toast.svelte  VideoPlayer.svelte  VoiceNotePlayer.svelte
src-ui/components/chat/: ChatHeader.svelte  MessageInput.svelte  MessageList.svelte
src-ui/lib/: TitleBar.test.ts  attachment_store.ts  call_manager.ts  crypto.test.ts  crypto.ts  network.ts  persistence.ts  pow.ts  secure_storage.ts  signal_manager.ts  signal_store.test.ts  signal_store.ts  store.ts  types.ts  user_store.ts  utils.test.ts  utils.ts
src-ui/lib/actions/: auth.ts  background_handlers.ts  chat.ts  contacts.ts  groups.ts  message_utils.ts  messaging.ts  vault.ts
src-ui/lib/stores/: transfers.ts  ui.ts  user.ts
src-ui/lib/utils/: avatar.ts  file.ts  thumbnails.ts
src-ui/tests/: Sidebar.test.ts  crypto.test.ts  messaging_features.test.ts  network.test.ts  sanity.test.ts  signal_store.test.ts  user_store.test.ts  utils.test.ts
src/lib/: call_manager.ts  network.test.ts  signal_store.ts  types.ts  user_store.test.ts
