[package]
name = "entropy"
version = "0.1.0"
description = "Sovereign, Decentralized Messaging Client"
authors = ["Entropy Team <contact@entropy.network>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.33.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["socks", "json"] }
html_parser = "0.7"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
zeroize = "1.7"
tokio-socks = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Reduce binary size and remove stack trace info
codegen-units = 1 # Better optimizations
lto = true # Link Time Optimization across all crates
strip = true # Remove all debug symbols and symbol tables from the binary

[dev-dependencies]
tempfile = "3.24.0"
