[package]
name = "entropy"
version = "0.1.0"
description = "Sovereign, Decentralized Messaging Client"
authors = ["Moyzy<moyzy@entropymessenger.com>"]
edition = "2024"

[lib]
name = "entropy"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2.10", features = [ "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
# webkit2gtk moved to target-specific dependencies below
# rusqlite moved to target-specific dependencies below
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
argon2 = "0.5"
num-bigint = "0.4"
tokio-socks = "0.5"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", package = "libsignal-protocol" }
rand = "0.9"
subtle = "2.6"
async-trait = "0.1"
uuid = { version = "1.13", features = ["v4"] }
chrono = "0.4"
zip = "0.6"
walkdir = "2"
tar = "0.4.44"
flate2 = "1.1.9"
aes-gcm = "0.10"
tokio-rustls = "0.26.4"
tokio-util = "0.7.18"
tracing = "0.1"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
chacha20poly1305 = "0.10.1"
warp = "0.3"
bytes = "1"
tokio-stream = "0.1"
r2d2 = "0.8"
# removed conflicting dep

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_10"] }

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
rusqlite = { version = "0.33.0", features = ["bundled-sqlcipher"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
rusqlite = { version = "0.33.0", features = ["bundled"] }
ndk-context = "0.1.1" # Standard NDK context resolution for JNI bindings
jni = "0.21.1" # Java Native Interface support for invoking Java from Rust




[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 3 

[profile.release]
opt-level = 3
incremental = false
panic = "abort"
codegen-units = 1
lto = true
strip = true


